--- a/Tcm.Interface.WebUi/src/app/pages/class/classroom/pages/classroom-add/classroom-add.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/class/classroom/pages/classroom-add/classroom-add.component.html
@@ -18,15 +18,16 @@
             <div class="form-group row">
               <label for="name" class="col-sm-3 col-form-label text-left">سال تحصیلی:</label>
               <div class="col-sm-9">
-                <input type="text" class="form-control" name="name" [(ngModel)]="item.Year" required>
+                <input type="text" class="form-control" name="year" [(ngModel)]="item.Year" required>
               </div>
             </div>
 
             <div class="form-group row">
+
               <label for="name" class="col-sm-3 col-form-label text-left">پایه تحصیلی:</label>
               <div class="col-sm-9">
-                <select class="form-control" name="SchoolEducationSubCourseId" [(ngModel)]="item.SchoolEducationSubCourseId">
-                  <option value="0">--- انتخاب کنید ---</option>
+                <select class="form-control" name="SchoolEducationSubCourseId"
+                  [(ngModel)]="item.SchoolEducationSubCourseId">
                   <option *ngFor="let item of schoolEducationSubCourseList" [value]="item.Id">
                     {{item.EducationSubCourseName}}
                   </option>
@@ -36,11 +37,11 @@
 
             <div class="form-group row">
               <div class="col-sm-12 text-right">
-                <button type="submit" class="btn btn-primary" [disabled]='!f.valid'>ذخیره</button>
+                <button type="submit" class="btn btn-primary"
+                  [disabled]='!f.valid'>ذخیره</button>
               </div>
             </div>
           </form>
-
         </div>
       </nb-card-body>
     </nb-card>
