--- a/Tcm.Interface.WebUi/src/app/pages/class/classroom/pages/classroom-add/classroom-add.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/class/classroom/pages/classroom-add/classroom-add.component.html
@@ -16,11 +16,18 @@
             </div>
 
             <div class="form-group row">
+
               <label for="name" class="col-sm-3 col-form-label text-left">سال تحصیلی:</label>
               <div class="col-sm-9">
-                <input type="text" class="form-control" name="year" [(ngModel)]="item.Year" required>
+                <select class="form-control" name="educationYearId"
+                  [(ngModel)]="item.EducationYearId">
+                  <option *ngFor="let item of educationYearList" [value]="item.Id">
+                    {{item.StartDate + ' - ' + item.EndDate}}
+                  </option>
+                </select>
               </div>
             </div>
+
 
             <div class="form-group row">
 
